gsKit ChangeLog:

-> 06/07/06 - Chris Gilbert (Neovanglist)
   * Added preliminary (and buggy) libpng support.
   * Added gsKit_setup_tbw routine to find TBW value for textures.
   * Added FONTM print alignment support.
   * Added some experimental but disabled lineoffset tweaks for halfbuffer modes.

-> 05/19/06 - Chris Gilbert (Neovanglist)
   * Added gsKit_prim_sprite_striped_texture. This routine autostrips
     sprites for a big performance boost. This is most useful on large
     sprites which would otherwise result in many GS pagemisses.
     NOTE: This ONLY works with textures that have NEAREST filtering.
   * Reworked drawbuffers so that it waits on the FINISH signal from the GS
     before pushing new DMA to it.
   * Added "bigtex" example.
   * Added option to delay texture uploading. This allows you to do it manually
     using the gsKit_texture_send_inline in usercode.

-> 04/22/06 - Chris Gilbert (Neovanglist)
   * Fully implimented FONTM support.
   * Added a hack on 4bit BMP textures to swap nibbles so it displays
     correctly.
   * Added a gsKit_texture_send_inline routine, this allows you to schedule
     a texture upload via your drawbuffer.
     *WARNING* You MUST make ensure that when the time comes to send, the
     cache is in sync since it won't FlushCache() for you. The best way
     to do this is to write the texture to be uploaded in memory using UCAB.
   * Added a gsKit_heap_alloc_dma routine. This allows you to allocate things
     with their own DMA_TAGs into the drawbuffer. (Like textures)

-> 04/15/06 - Chris Gilbert (Neovanglist)
   * Added 4bit BMP image support.
   * Started on FONTM support - added fontm example

-> 04/14/06 - Chris Gilbert (Neovanglist)
   * More big changes to the drawbuffer system...
   * gsKit is now working 100% as far as I know, please report bugs ASAP.
   * gsKit is now the fastest library according to Shazz's "newlibtest" - 27800 tri/frame!